--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -2,7 +2,9 @@
   "__version__": "1.0.6",
   "general": {
     "designResolution": {
-      "height": 1920
+      "height": 1920,
+      "fitHeight": true,
+      "fitWidth": false
     }
   }
 }
